# fwuffgrep

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  input.rs  lib.rs  main.rs  tests.rs
src/io/: input.rs  output.rs
tests/: regex_search_tests.rs  search_tests.rs
