[package]
name = "fwuffgrep"
authors = ["Fwuff"]
description = "Basic implementation of a grep command written in rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
colored = "2.0.4"
regex = "1.9.5"
